--- a/OECD_BLI_Dataset.ipynb
+++ b/OECD_BLI_Dataset.ipynb
@@ -12,13 +12,15 @@
     "The Better Life Index aims to involve citizens in the debate on measuring the well-being of societies, and to empower them to become more informed and engaged in the policy-making process that shapes all our lives.\n",
     "\n",
     "Brief recap of data, goals, tasks.\n",
+    "\n",
     "I'm using the data from OECD's Better Life Index. It provides 20 quality of life indicators for 42 countries. Please note that I removed some of the indicators as part of the data wrangling.\n",
     "I tried to create an interactive visualisation where the end user would be able to look at different indicators and see if they are correlated with each other. Using the visualisation, the user can select 3 indicators - one for each dimension - x-axis, y-axis and the colour of the mark.\n",
     "The user selects 3 indicators using the dropdown widgets and the chart updates accordingly.\n",
     "\n",
     "\n",
     "\n",
-    "Summary of the key elements of the design\n",
+    "Summary of the key elements of the design.\n",
+    "\n",
     "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets so the user is able to select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators (x, y and hue). \n",
     "\n",
     "\n"
@@ -34,45 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "e14e40cd-0f9f-4656-9a11-7cb3abcab256",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 42 entries, 0 to 41\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column                                                 Non-Null Count  Dtype  \n",
-      "---  ------                                                 --------------  -----  \n",
-      " 0   (Country, )                                            42 non-null     object \n",
-      " 1   (Air pollution, Micrograms per cubic metre)            42 non-null     float64\n",
-      " 2   (Dwellings without basic facilities, Percentage)       39 non-null     float64\n",
-      " 3   (Educational attainment, Percentage)                   41 non-null     float64\n",
-      " 4   (Employees working very long hours, Percentage)        40 non-null     float64\n",
-      " 5   (Employment rate, Percentage)                          42 non-null     float64\n",
-      " 6   (Feeling safe walking alone at night, Percentage)      42 non-null     float64\n",
-      " 7   (Homicide rate, Ratio)                                 42 non-null     float64\n",
-      " 8   (Household net adjusted disposable income, US Dollar)  36 non-null     float64\n",
-      " 9   (Household net wealth, US Dollar)                      30 non-null     float64\n",
-      " 10  (Housing expenditure, Percentage)                      38 non-null     float64\n",
-      " 11  (Labour market insecurity, Percentage)                 35 non-null     float64\n",
-      " 12  (Life expectancy, Years)                               42 non-null     float64\n",
-      " 13  (Life satisfaction, Average score)                     42 non-null     float64\n",
-      " 14  (Long-term unemployment rate, Percentage)              40 non-null     float64\n",
-      " 15  (Personal earnings, US Dollar)                         36 non-null     float64\n",
-      " 16  (Rooms per person, Ratio)                              39 non-null     float64\n",
-      " 17  (Student skills, Average score)                        40 non-null     float64\n",
-      " 18  (Voter turnout, Percentage)                            42 non-null     float64\n",
-      " 19  (Water quality, Percentage)                            42 non-null     float64\n",
-      " 20  (Years in education, Years)                            40 non-null     float64\n",
-      "dtypes: float64(20), object(1)\n",
-      "memory usage: 7.0+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Getting all needed libraries\n",
     "import ipywidgets as widgets\n",
@@ -102,20 +69,21 @@
     "data_wide = data_wide.drop(columns='Stakeholder engagement for developing regulations', level='Indicator')\n",
     "data_wide = data_wide.drop(columns='Time devoted to leisure and personal care', level='Indicator')\n",
     "data_wide = data_wide.drop(columns='Quality of support network', level='Indicator')\n",
-    "#data_wide.head()\n",
-    "data_wide.info()"
+    "data_wide.head()\n",
+    "#data_wide.info()\n",
+    "data = data_wide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "1df02614-c53a-49de-944f-1d2bc145df6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7093475bcf414f1196c512f7497746e0",
+       "model_id": "b5614b59c52740b9a782fdb13ab82641",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,12 +91,19 @@
        "VBox(children=(Output(), Dropdown(description='X-axis:', options=('Air pollution Micrograms per cubic metre', …"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# putting data_wide into data\n",
+    "#data = data_wide\n",
+    "\n",
+    "data.columns = [' '.join(col).strip() for col in data.columns]\n",
     "\n",
     "# Getting each indicator\n",
     "indicators = [col for col in data.columns if 'Country' not in col]\n",
@@ -136,8 +111,8 @@
     "# Creating three dropdown widgets for the x-axis, y-axis and hue (z-axis) indicator selections\n",
     "dropdown_x = widgets.Dropdown(\n",
     "    options=indicators,\n",
-    "    value=indicators[0],  # default value\n",
-    "    description='X-axis:',\n",
+    "    value=indicators[0],  # default value, ensure it's different from x-axis\n",
+    "    description='X-axis:'\n",
     ")\n",
     "\n",
     "dropdown_y = widgets.Dropdown(\n",
@@ -198,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c411b173-aa1c-4b31-ac5d-30d96c7108b7",
+   "id": "6eebdd92-c0a8-4a8d-b15d-5a71712d3296",
    "metadata": {},
    "outputs": [],
    "source": []
