--- a/OECD_BLI_Dataset.ipynb
+++ b/OECD_BLI_Dataset.ipynb
@@ -17,11 +17,17 @@
     "I tried to create an interactive visualisation where the end user would be able to look at different indicators and see if they are correlated with each other. Using the visualisation, the user can select 3 indicators - one for each dimension - x-axis, y-axis and the colour of the mark.\n",
     "The user selects 3 indicators using the dropdown widgets and the chart updates accordingly.\n",
     "\n",
-    "\n",
-    "\n",
     "Summary of the key elements of the design.\n",
     "\n",
-    "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets so the user is able to select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators (x, y and hue). \n",
+    "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets (for X, Y, and Hue) so the user is able to select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators. This design provides the user with flexibility because it enables them to select any indicator of their choice and place it on either x, y or hue dimensions.\n",
+    "\n",
+    "A discussion of my final evaluation approach.\n",
+    "\n",
+    "I demonstrated the visualisation to my girlfriend \n",
+    "\n",
+    "Synthesis of my findings.\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -36,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e14e40cd-0f9f-4656-9a11-7cb3abcab256",
    "metadata": {},
    "outputs": [],
@@ -49,7 +55,6 @@
     "\n",
     "# reading in data\n",
     "data_long = pd.read_csv(\"OECD_Better_Life_Index_Stripped.csv\")\n",
-    "\n",
     "\n",
     "# To simplify analysis, let's only leave rows that have Total in the Inequality column. For simplicity, not breaking down data by gender.\n",
     "data_filtered_1 = data_long[data_long['Inequality'] == 'Total']\n",
@@ -64,26 +69,35 @@
     "    values='Value'\n",
     ").reset_index()\n",
     "\n",
-    "# Removing columns that we will not include in the analysis because they are a little too vague\n",
+    "# Removing columns that we will not include in the analysis because they are a little too vague due to their subjectivity.\n",
     "data_wide = data_wide.drop(columns='Self-reported health', level='Indicator')\n",
     "data_wide = data_wide.drop(columns='Stakeholder engagement for developing regulations', level='Indicator')\n",
     "data_wide = data_wide.drop(columns='Time devoted to leisure and personal care', level='Indicator')\n",
     "data_wide = data_wide.drop(columns='Quality of support network', level='Indicator')\n",
-    "data_wide.head()\n",
+    "#data_wide.head()\n",
     "#data_wide.info()\n",
+    "# putting data_wide into data\n",
     "data = data_wide"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41df6204-f87e-40c2-bd02-3d0867d86a69",
+   "metadata": {},
+   "source": [
+    "Creating the visualisation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "1df02614-c53a-49de-944f-1d2bc145df6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5614b59c52740b9a782fdb13ab82641",
+       "model_id": "6bbdc663bd654c25997cfc3daa9f353d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,21 +105,16 @@
        "VBox(children=(Output(), Dropdown(description='X-axis:', options=('Air pollution Micrograms per cubic metre', …"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# putting data_wide into data\n",
-    "#data = data_wide\n",
-    "\n",
+    "# Getting rid of the 2 index column headings and turning it into a single heading for each column as an indicator and its unit.\n",
     "data.columns = [' '.join(col).strip() for col in data.columns]\n",
     "\n",
-    "# Getting each indicator\n",
+    "# Getting each indicator (and its units)\n",
     "indicators = [col for col in data.columns if 'Country' not in col]\n",
     "\n",
     "# Creating three dropdown widgets for the x-axis, y-axis and hue (z-axis) indicator selections\n",
@@ -129,7 +138,9 @@
     "\n",
     "# Function to create the chart based on selected indicators\n",
     "def create_chart(x_indicator, y_indicator, z_indicator):\n",
-    "    chart = alt.Chart(data).mark_circle().encode(\n",
+    "    chart = alt.Chart(data).mark_circle(\n",
+    "        size=90  # increasing the size of circles for better visibility\n",
+    "    ).encode(\n",
     "        x=alt.X(x_indicator, type='quantitative', title=x_indicator),\n",
     "        y=alt.Y(y_indicator, type='quantitative', title=y_indicator),\n",
     "        color=alt.Color(z_indicator, type='quantitative', title=z_indicator, \n",
