--- a/OECD_BLI_Dataset.ipynb
+++ b/OECD_BLI_Dataset.ipynb
@@ -11,21 +11,21 @@
     "\n",
     "The Better Life Index aims to involve citizens in the debate on measuring the well-being of societies, and to empower them to become more informed and engaged in the policy-making process that shapes all our lives.\n",
     "\n",
-    "Brief recap of data, goals, tasks.\n",
+    "#### Brief recap of data, goals, tasks\n",
     "\n",
     "I'm using the data from OECD's Better Life Index. It provides 20 quality of life indicators for 42 countries. Please note that I removed some of the indicators as part of the data wrangling.\n",
     "I tried to create an interactive visualisation where the end user would be able to look at different indicators and see if they are correlated with each other. Using the visualisation, the user can select 3 indicators - one for each dimension - x-axis, y-axis and the colour of the mark.\n",
     "The user selects 3 indicators using the dropdown widgets and the chart updates accordingly.\n",
     "\n",
-    "Summary of the key elements of the design.\n",
+    "#### Summary of the key elements of the design\n",
     "\n",
     "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets (for X, Y, and Hue) so the user is able to select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators. This design provides the user with flexibility because it enables them to select any indicator of their choice and place it on either x, y or hue dimensions.\n",
     "\n",
-    "A discussion of my final evaluation approach.\n",
+    "#### A discussion of my final evaluation approach\n",
     "\n",
     "I demonstrated the visualisation to my girlfriend \n",
     "\n",
-    "Synthesis of my findings.\n",
+    "#### Synthesis of my findings\n",
     "\n",
     "\n",
     "\n",
@@ -37,12 +37,12 @@
    "id": "8ddeea9a-2f6f-415f-aa7b-266861b3baac",
    "metadata": {},
    "source": [
-    "Reading in data, cleaning it up and transforming it into wide format"
+    "### Reading in data, cleaning it up and transforming it into wide format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "e14e40cd-0f9f-4656-9a11-7cb3abcab256",
    "metadata": {},
    "outputs": [],
@@ -85,19 +85,19 @@
    "id": "41df6204-f87e-40c2-bd02-3d0867d86a69",
    "metadata": {},
    "source": [
-    "Creating the visualisation"
+    "### Creating the visualisation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "1df02614-c53a-49de-944f-1d2bc145df6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bbdc663bd654c25997cfc3daa9f353d",
+       "model_id": "b2fa3d0fb5144c819a361d3ffcb62dbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +105,7 @@
        "VBox(children=(Output(), Dropdown(description='X-axis:', options=('Air pollution Micrograms per cubic metre', …"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,11 +141,13 @@
     "    chart = alt.Chart(data).mark_circle(\n",
     "        size=90  # increasing the size of circles for better visibility\n",
     "    ).encode(\n",
-    "        x=alt.X(x_indicator, type='quantitative', title=x_indicator),\n",
-    "        y=alt.Y(y_indicator, type='quantitative', title=y_indicator),\n",
+    "        x=alt.X(x_indicator, type='quantitative', title=x_indicator,\n",
+    "               axis=alt.Axis(labels=True, labelColor='blue', titleColor='rgb(117, 38, 4)', titleFontSize=15)),\n",
+    "        y=alt.Y(y_indicator, type='quantitative', title=y_indicator,\n",
+    "               axis=alt.Axis(labels=True, labelColor='blue', titleColor='rgb(117, 38, 4)', titleFontSize=15)),\n",
     "        color=alt.Color(z_indicator, type='quantitative', title=z_indicator, \n",
-    "                        scale=alt.Scale(scheme='reds'),  # Maybe there could be a better color scheme for display ordinal data...\n",
-    "                        legend=alt.Legend(title=\"Hue: \" + z_indicator)),\n",
+    "                        scale=alt.Scale(scheme='reds'),  # Maybe there could be a better color scheme for displaying ordinal data...\n",
+    "                        legend=alt.Legend(title=\"Hue: \" + z_indicator, titleColor='rgb(117, 38, 4)', titleFontSize=14, orient='right')),\n",
     "        tooltip=['Country:N', alt.Tooltip(x_indicator), alt.Tooltip(y_indicator), alt.Tooltip(z_indicator)]\n",
     "    ).properties(\n",
     "        width=700,\n",
@@ -185,6 +187,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6eebdd92-c0a8-4a8d-b15d-5a71712d3296",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efa4bdbd-e850-4aea-9df6-0d3282f68bc7",
    "metadata": {},
    "outputs": [],
    "source": []
