--- a/OECD_BLI_Dataset.ipynb
+++ b/OECD_BLI_Dataset.ipynb
@@ -6,6 +6,8 @@
    "id": "911beebe-3511-49bf-b61a-3ec828f1a608",
    "metadata": {},
    "source": [
+    "## TO VIEW THE VISUALISATION, RUN THE CODE BELOW\n",
+    "\n",
     "The raw OECD Better Life Index dataset was obtained from\n",
     "https://stats.oecd.org/Index.aspx?DataSetCode=BLI\n",
     "\n",
@@ -19,16 +21,19 @@
     "\n",
     "#### Summary of the key elements of the design\n",
     "\n",
-    "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets (for X, Y, and Hue) so the user is able to select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators. This design provides the user with flexibility because it enables them to select any indicator of their choice and place it on either x, y or hue dimensions.\n",
+    "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets (for X, Y, and Hue) so the user can select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators. This design provides the user with flexibility because it enables them to select any indicator of their choice and place it on either x, y or hue dimensions.\n",
     "\n",
     "#### A discussion of my final evaluation approach\n",
     "\n",
-    "I demonstrated the visualisation to my girlfriend \n",
+    "I demonstrated the visualisation to my girlfriend and a couple of colleagues at work. The evaluation wasn't very rigorous, but they did give the visualisation a test drive. The evaluation was definitely on the qualitative side of the fence - maybe somewhat akin to a journaling. The \"evaluators\" used the tool and I asked them what they thought of it.\n",
     "\n",
     "#### Synthesis of my findings\n",
     "\n",
-    "\n",
-    "\n",
+    "Users liked the aspect that they could choose whichever indicator they wanted and compare it with another indicator of choice. \n",
+    "One of the users said that she found it interesting that when plotting the Life Expectancy against Household net wealth, there wasn't as much of a positive slope as she expected, as a matter of fact there is barely any upward trend in that relationship. \n",
+    "Another user said that they expected to see some relationship between the Life Expectancy as a function of Air pollution - there is barely any effect to be observed there, which surprised me too.\n",
+    "What I found interesting is that there seems to be some correlation between Personal earnings and Voter turnout.\n",
+    "None of the users cared much about the Hue dimension, they just seemed to want to use the X and the Y axis during their exploration so I wonder if I could implement it better or maybe consider using another channel for the third dimension. I would also consider implementing a multi chart view so that different charts could be viewed side by side.\n",
     "\n"
    ]
   },
