--- a/OECD_BLI_Dataset.ipynb
+++ b/OECD_BLI_Dataset.ipynb
@@ -19,6 +19,10 @@
     "I tried to create an interactive visualisation where the end user would be able to look at different indicators and see if they are correlated with each other. Using the visualisation, the user can select 3 indicators - one for each dimension - x-axis, y-axis and the colour of the mark.\n",
     "The user selects 3 indicators using the dropdown widgets and the chart updates accordingly.\n",
     "\n",
+    "#### A link to the visualisation\n",
+    "\n",
+    "https://mybinder.org/v2/gh/MarisPaurs/DTSA-5304-Visualization/HEAD?labpath=OECD_BLI_Dataset.ipynb\n",
+    "\n",
     "#### Summary of the key elements of the design\n",
     "\n",
     "This is an X and Y axis chart. I chose this so that it would be easier to notice correlated indicators. I'm using 3 dropdown widgets (for X, Y, and Hue) so the user can select indicators of interest. Hovering over each datapoint gives the information about that datapoint - the name of the country and the values for the 3 respective indicators. This design provides the user with flexibility because it enables them to select any indicator of their choice and place it on either x, y or hue dimensions.\n",
